objects/HC_Mapping_Field__mdt.object
<CustomObject>
    <fields>
        <fullName>Api_SF_Field_Name__c</fullName>
        <description>Salesforce api field name</description>
        <label>Api SF Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Api_SF_Object_Name__c</fullName>
        <description>Salesforce api field name</description>
        <label>Api SF Object Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value__c</fullName>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ext_Api_Field_Name__c</fullName>
        <description>External api field name</description>
        <label>Ext Api Field Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pddr_Lookup_API_Name__c</fullName>
        <label>Pddr Lookup API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>HC Mapping Field</label>
    <pluralLabel>HC Mapping Fields</pluralLabel>
</CustomObject>